# py-tars

./: .env.example  .gitignore  DOCKER-COMPOSE-GUIDE.md  README.md  REFACTOR_NOTES.md  VISION.md  docker-compose.yml  e-paper-example.py  pytest.ini  run-watch.sh  run.npu.sh  run.tests.sh  servoctl.py  test-camera.sh  test.sh
apps/camera-service/: .env.example  .gitignore  Dockerfile  MIGRATION.md  Makefile  README.md  __init__.py  capture.py  config.py  main.py  mqtt_client.py  pyproject.toml  requirements.txt  service.py  streaming.py
apps/camera-service/src/camera_service/: __init__.py  __main__.py  capture.py  config.py  mqtt_client.py  service.py  streaming.py
apps/camera-service/tests/: conftest.py
apps/config-manager/: .env.example  Makefile  README.md  pyproject.toml
apps/config-manager/src/config_manager/: __init__.py  __main__.py  api.py  auth.py  config.py  mqtt.py  service.py
apps/config-manager/tests/: conftest.py
apps/config-manager/tests/contract/: test_mqtt_publishing.py
apps/llm-worker/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
apps/llm-worker/llm_worker/: __main__.py  config.py  mcp_client.py  mqtt_client.py  service.py
apps/llm-worker/tests/: conftest.py  test_contract_roundtrip.py  test_service.py
apps/mcp-bridge/: .env.example  Makefile  README.md  pyproject.toml  structure-after.txt  structure-before.txt
apps/mcp-bridge/examples/: mcp-servers.json
apps/mcp-bridge/mcp_bridge/: main.py  mqtt_client.py
apps/mcp-bridge/tests/: __init__.py  conftest.py  test_config_generator.py  test_config_writer.py  test_discovery_integration.py  test_e2e_installation.py  test_e2e_pipeline.py  test_filesystem_server.py  test_installation_service.py  test_local_discovery.py  test_metadata.py  test_mqtt_client.py  test_pip_installer.py  test_real_discovery.py
apps/mcp-server/: .env.example  Makefile  README.md  pyproject.toml  structure-after.txt  structure-before.txt
apps/mcp-server/tars_mcp_server/: __init__.py  __main__.py  server.py
apps/mcp-server/tests/: __init__.py  conftest.py
apps/memory-worker/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  structure-after.txt  structure-before.txt
apps/memory-worker/examples/: hyperdb_example.py  personality_prompt.py
apps/memory-worker/memory_worker/: __init__.py  __main__.py  config.py  embedder_factory.py  hyperdb.py  mqtt_client.py  npu_embedder.py  service.py
apps/memory-worker/scripts/: README.md  benchmark_int8_reranker.py  convert_onnx_to_rknn.py  convert_reranker_to_rknn.py  convert_st_to_onnx.py  prepare_npu_models.sh  test_int8_conversion.sh  test_int8_performance.py
apps/memory-worker/tests/: conftest.py  test_async_embeddings.py  test_contracts.py  test_hyperdb.py  test_service_character.py
apps/movement-service/: .env.example  Makefile  README.md  pyproject.toml  structure-after.txt  structure-before.txt
apps/movement-service/movement_service/: __init__.py  __main__.py  calibration.py  config.py  json.py  models.py  sequences.py  service.py
apps/movement-service/tests/: conftest.py  test_models.py  test_sequences.py
apps/router/: .env.example  Dockerfile  Makefile  README.md  __init__.py  main.py  pyproject.toml  structure-after.txt  structure-before.txt
apps/router/tests/: conftest.py  test_mqtt_adapter.py  test_router_config.py  test_router_metrics.py  test_router_mqtt_integration.py  test_router_streaming.py  test_runtime_dispatcher.py  test_runtime_helpers.py  test_runtime_logging.py  test_runtime_registry.py  test_wake_mode.py
apps/stt-worker/: .env.example  Dockerfile  Makefile  README.md  __init__.py  audio_capture.py  audio_fanout.py  audio_preproc.py  config.py  main.py  mqtt_utils.py  pyproject.toml  requirements.txt  structure-after.txt  structure-before.txt  suppression.py  test_wake_mic.py  transcriber.py  vad.py  ws_stream.py
apps/stt-worker/stt_worker/: __init__.py  app.py  audio_capture.py  audio_fanout.py  audio_preproc.py  config.py  fft_ws.py  mqtt_utils.py  noise_floor_calibrator.py  suppression.py  transcriber.py  vad.py  ws_stream.py
apps/stt-worker/tests/: conftest.py  main.py  test_async_transcription.py  test_contracts.py  test_domain_stt_service.py  test_fft_ws.py  test_suppression.py  test_wake_mic.py
apps/tts-worker/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  structure-after.txt  structure-before.txt
apps/tts-worker/external_services/: __init__.py  base.py  eleven_labs.py
apps/tts-worker/tests/: conftest.py  test_service_controls.py
apps/tts-worker/tts_worker/: __init__.py  __main__.py  config.py  models.py  piper_synth.py  service.py
apps/ui/: .env.example  Dockerfile  Makefile  OPENGL_UPGRADE.md  README.md  config.py  fft_ws_client.py  layout.json  main.py  mqtt_bridge.py  pyproject.toml  requirements.txt  test_opengl.py  ui.toml
apps/ui-eink-display/: .env.example  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  pyproject.toml  validate.py
apps/ui-eink-display/docker/: epdconfig.py
apps/ui-web/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  server.py
apps/ui-web/frontend/: .eslintrc.cjs  .gitignore  INTEGRATION_COMPLETE.md  PHASE3_UI_COMPLETE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/ui-web/static/: index.html
apps/ui-web/tests/: conftest.py
apps/ui/module/: __init__.py  layout.py  spectrum.py  tars_idle.py
apps/ui/src/ui/: config.py  (+3 more)
apps/ui/tests/: conftest.py
apps/wake-activation/: .env.example  .env.npu  Dockerfile  Dockerfile.npu  Makefile  NPU_ACCELERATION.md  README.md  compose.npu.yml  pyproject.toml  test_npu.sh
apps/wake-activation/scripts/: convert_tflite_to_rknn.py  inspect_onnx.py  test_npu_docker.py
apps/wake-activation/tests/: conftest.py  test_audio.py  test_config.py  test_detector.py  test_models.py  test_npu_detector.py  test_service.py
apps/wake-activation/wake_activation/: __init__.py  __main__.py  config.py  detector.py  models.py  npu_utils.py  service.py
(+603 files in other folders)
