[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-llm-worker"
version = "0.1.0"
description = "LLM worker for the TARS voice assistant stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt==0.16.2",
  "paho-mqtt<2.0",
  "httpx==0.27.0",
  "orjson>=3.11.0",
  "backoff==2.2.1",
  "pydantic==2.9.2",
  "typing_extensions==4.12.2",
  "tars-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
tars-llm-worker = "llm_worker.__main__:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = [
  "llm_worker",
  "llm_worker.providers",
]
include-package-data = false
