[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-llm-worker"
version = "0.1.0"
description = "LLM worker for the TARS voice assistant stack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt==0.16.2",
  "paho-mqtt<2.0",
  "httpx>=0.27.0",
  "orjson>=3.11.0",
  "backoff>=2.2.1",
  "pydantic>=2.9.2",
  "typing_extensions>=4.12.2",
  "tars-core>=0.1.0",
  "mcp[cli]>=1.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
tars-llm-worker = "llm_worker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "llm_worker",
  "llm_worker.providers",
  "llm_worker.handlers",
]
include-package-data = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
