[project]
name = "tars-mcp-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt>=0.16.2",
  "paho-mqtt<2.0",
  "orjson>=3.11.0",
  "pydantic>=2.7",
  "mcp>=1.2.0",   # official MCP Python SDK
  "tenacity>=8.4",
  "PyYAML>=6.0",
  "tars-core>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
mcp-filesystem = "mcp_bridge.servers.filesystem:main"