[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-memory-worker"
version = "0.1.0"
description = "Memory worker providing retrieval and persona services for the TARS voice assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bm25s",
  "pystemmer",
  "hyperdb-python",
  "scikit-learn",
  "flashrank",
  "asyncio-mqtt==0.16.2",
  "paho-mqtt<2.0",
  "orjson==3.11.3",
  "numpy==1.26.4",
  "sentence-transformers==2.2.2",
  "huggingface_hub==0.16.4",
  "torch==2.2.2",
  "tars-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
tars-memory-worker = "memory_worker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["memory_worker"]
include-package-data = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
