[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-stt-worker"
version = "0.1.0"
description = "Speech-to-text worker service for the TARS voice assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt>=0.16.2",
  "faster-whisper>=1.0.3",
  "httpx>=0.27.0",
  "numpy>=1.26.0,<2.0",
  "orjson>=3.10.7",
  "paho-mqtt<2.0",
  "pyaudio>=0.2.14",
  "pydantic>=2.6.0",
  "rapidfuzz>=3.9.6",
  "syllapy>=0.7.2",
  "webrtcvad>=2.0.10",
  "websockets>=12.0",
]

[project.optional-dependencies]
openai = ["httpx>=0.27.0"]

[tool.setuptools]
packages = ["stt_worker"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
