[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-stt-worker"
version = "0.1.0"
description = "Speech-to-text worker service for the TARS voice assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt>=0.16.2",
  "faster-whisper>=1.0.3",
  "httpx>=0.27.0",
  "numpy>=1.26.0,<2.0",
  "orjson>=3.10.7",
  "paho-mqtt<2.0",
  "pyaudio>=0.2.14",
  "pydantic>=2.6.0",
  "rapidfuzz>=3.9.6",
  "syllapy>=0.7.2",
  "webrtcvad>=2.0.10",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-orjson>=3.6",
]
openai = ["httpx>=0.27.0"]

[project.scripts]
tars-stt-worker = "stt_worker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stt_worker"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]  # Module level import not at top of file (docstrings before imports)

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
