[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-ui-web"
version = "0.1.0"
description = "WebSocket-powered debug UI for monitoring TARS services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "asyncio-mqtt>=0.16.2",
    "paho-mqtt<2.0",
    "orjson>=3.11.3",
    "httpx>=0.27.0",
    "tars-core>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27.0",  # For testing FastAPI
]

[project.scripts]
tars-ui-web = "ui_web.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ui_web"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
