[project]
name = "tars-wake-activation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "asyncio-mqtt>=0.16.2",
  "orjson>=3.10.7",
  "paho-mqtt<2.0",
  "pydantic>=2.7",
  "numpy>=1.26,<2.0",
]

[tool.ruff]
line-length = 100

[project.optional-dependencies]
openwakeword = [
  "openwakeword>=0.5.0",
]
