[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tars-wake-activation"
version = "0.1.0"
description = "Wake word activation service for TARS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncio-mqtt>=0.16.2",
  "orjson>=3.10.7",
  "paho-mqtt<2.0",
  "pydantic>=2.6.0",
  "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-orjson>=3.6",
]
openwakeword = [
  "openwakeword>=0.5.0",
]

[project.scripts]
tars-wake-activation = "wake_activation.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wake_activation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
]
ignore = [
  "E501",    # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "openwakeword.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rknnlite.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: MQTT contract tests",
]
